Fix missing slack properties
To generate complete XML that can properly override global
slack settings, the details need to be duplicated in the
properties, too. Without this, the slack plugin can end up
with empty elements overriding the global settings, resulting
in a global config that works, but individual jobs that do not.

Change-Id: Ibb37a03ce0e4ae506205fbb57193a467d055212b

--- a/tests/properties/fixtures/slack002.yaml
+++ b/tests/properties/fixtures/slack002.yaml
@@ -5,3 +5,6 @@ properties:
         notify-aborted: true
         include-custom-message: true
         custom-message: 'Custom foo message'
+        team-domain: my-slack-domain
+        token: my-slack-token
+        room: '#my-room'
