Add execution type for multijob

--- a/tests/builders/fixtures/multibuild.yaml
+++ b/tests/builders/fixtures/multibuild.yaml
@@ -2,6 +2,7 @@ builders:
   - multijob:
       name: PhaseOne
       condition: SUCCESSFUL
+      execution-type: SEQUENTIALLY
       projects:
         - name: PhaseOneJobA
           current-parameters: true
